# ERGOSPHERE-Book-Insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  nginx.conf  pyproject.toml  supervisord.conf
backend/: .env.example  entrypoint.sh  requirements.txt
backend/books/: models.py  serializers.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py
backend/chat/: models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chroma_db/: chroma.sqlite3
backend/config/: settings.py  urls.py
backend/insights/: admin.py  generator.py  groq_client.py  models.py  urls.py  views.py
backend/insights/management/commands/: clear_rag_cache.py  generate_insights.py
backend/insights/migrations/: 0001_initial.py
backend/rag/: chunker.py  embeddings.py  pipeline.py  urls.py  vector_store.py  views.py
backend/rag/management/commands/: build_index.py
backend/scraper/: scraper.py  urls.py  views.py
backend/scraper/management/commands/: scrape_books.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: BookCard.jsx  ChatBox.jsx  ChatHistory.jsx  InsightPanel.jsx  RatingStars.jsx
frontend/src/pages/: BookDetail.jsx  BookList.jsx  QAPage.jsx
